# arxiv-daily-mcp

./: .gitignore  LICENSE  README.ar.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
src/arxiv_daily_mcp/: __init__.py  __main__.py  server.py
