[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-daily-mcp"
version = "0.1.0"
description = "arXiv 논문 검색/저장 MCP 서버 — 카카오 PlayMCP + Claude Desktop 호환"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "상학", email = "nerin81@gmail.com" },
]
keywords = ["mcp", "arxiv", "ai", "research", "playmcp", "kakao", "claude", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
arxiv-daily-mcp = "arxiv_daily_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sanghak/arxiv-daily-mcp"
Repository = "https://github.com/sanghak/arxiv-daily-mcp"
Issues = "https://github.com/sanghak/arxiv-daily-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_daily_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/arxiv_daily_mcp",
    "README.md",
    "LICENSE",
]
