[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-daily-mcp"
version = "0.1.0"
description = "MCP server wrapping an arXiv CLI workflow — multilingual search (KO/ZH/JA/EN) and local Markdown note archival"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "arxiv-daily-mcp contributors" },
]
keywords = ["mcp", "arxiv", "ai", "research", "multilingual", "claude", "agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
arxiv-daily-mcp = "arxiv_daily_mcp.server:main"

[project.urls]
Homepage = "https://github.com/nerin81-netizen/arxiv-daily-mcp"
Repository = "https://github.com/nerin81-netizen/arxiv-daily-mcp"
Issues = "https://github.com/nerin81-netizen/arxiv-daily-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_daily_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/arxiv_daily_mcp",
    "README.md",
    "LICENSE",
]
